Felesleges változtatások, helyrehozás
Sok változás helyrehozása, projekten dolgozás